# idiag

./: .gitignore  iDiag_PRD_v2.docx  pyproject.toml  requirements.txt
app/: config.py  main.py
app/api/: devices.py  diagnostics.py  firmware.py  inventory.py  photos.py  pricing.py  reports.py  sales.py  serial.py  tools.py  verification.py  websocket.py
app/models/: crash.py  device.py  diagnostic.py  firmware.py  grading.py  inventory.py  sales.py  tools.py  verification.py
app/services/: bypass_tools.py  device_service.py  diagnostic_engine.py  export_service.py  firmware_manager.py  futurerestore.py  grading_engine.py  inventory_db.py  listing_generator.py  log_analyzer.py  photo_manager.py  pricing_service.py  qr_generator.py  report_generator.py  serial_decoder.py  syslog_service.py  verification_service.py  wipe_service.py
app/static/: index.html
app/templates/: index.html  (+1 more)
data/: crash_patterns.json  device_capabilities.json  market_prices.json
docs/: DEPLOYMENT.md
scripts/: build_usb.sh
tests/: conftest.py  test_api_routes.py  test_bypass_tools.py  test_cable_check.py  test_diagnostic_engine.py  test_firmware_manager.py  test_fraud_detection.py  test_futurerestore.py  test_generators.py  test_grading_engine.py  test_inventory_db.py  test_log_analyzer.py  test_photo_manager.py  test_pricing_service.py  test_report_generator.py  test_resilience.py  test_sales_db.py  test_serial_decoder.py  test_snapshot_api.py  test_syslog_service.py  test_syslog_ws.py  test_tools_api.py  test_tools_models.py  test_verification_service.py  test_wipe_service.py
(+17 files in other folders)
